typescript/checker/tests/conformance/expressions/typeGuards/typeGuardsInModule.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            169,
        ),
        hi: BytePos(
            172,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/typeGuards/typeGuardsInModule.ts:5:5
  |
5 | var num: number;
  |     ^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            187,
        ),
        hi: BytePos(
            195,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/typeGuards/typeGuardsInModule.ts:6:5
  |
6 | var strOrNum: string | number;
  |     ^^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            219,
        ),
        hi: BytePos(
            223,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/typeGuards/typeGuardsInModule.ts:7:5
  |
7 | var var1: string | number;
  |     ^^^^

